# fiscal-de-filmes

./: .gitignore  CLAUDE.md  README.md  _html.py  db.py  letterboxd.py  main.py  pyproject.toml  run.py  start.bat
backend/: database.py  main.py
backend/routers/: configuracao.py  diario.py  filmes.py  images.py  plataformas.py  projetos.py  reports.py  stats.py  storage.py  tmdb.py
frontend/: index.html
frontend/css/: main.css
frontend/js/: api.js  app.js  modal.js  utils.js
frontend/js/pages/: configuracoes.js  dashboard.js  diario.js  filme-detail.js  filme-modal.js  filme-watch-modal.js  filmes-list.js  projetos.js  reports.js  stats.js  watch-log.js
scripts/: fix_titles.py  import_listas.py  import_pg.py  sync_status.py  update_posters.py
