[project]
name = "fiscal-de-filmes"
version = "0.1.0"
description = ""
authors = [
    {name = "Mariana Barreto",email = "marianaportobarreto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.31.0)",
    "beautifulsoup4 (>=4.12.0)",
    "lxml (>=4.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
